# awad-project

./: README.md
.github/workflows/: deploy.yml
backend/: .env.development  .gitignore  README.md  app.js  package-lock.json  package.json
backend/api/: index.js
backend/config/: db.js
backend/controllers/: castController.js  movieListController.js  movieRatingController.js  moviesController.js  moviesOfCateController.js  navigationController.js  reviewController.js  trendingMoviesController.js  userController.js  userListController.js  userRatingController.js  webhookController.js
backend/middlewares/: isAuthenticated.js
backend/models/: Cast.js  Genres.js  MovieList.js  Movies.js  MoviesOfCate.js  MoviesTrending.js  PersonalList.js  Rating.js  Review.js  User.js  UserList.js  UserRating.js
backend/routes/: castRoute.js  moviesOfCateRoutes.js  moviesRoutes.js  moviesTrendingRoutes.js  navRoute.js  reviewRoute.js  (+2 more)
frontend/: .env.development  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
rag/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
rag/app/: main.py
rag/app/api/: __init__.py  create_token.py  knowledge_base.py  navigation.py  rag.py  retriever.py
rag/app/models/: request_models.py  response_models.py
rag/app/services/: knowledge_base_service.py  model_service.py  navigation_service.py  rag_service.py  retriever_service.py  tmdb_service.py
rag/app/utils/: decode_jwt.py  exceptions.py  transform_document.py  vector_store.py
(+115 files in other folders)
